Fixed the view, but the space is still cramped, and now that there's less space, users are more likely to notice that once they scroll over, they can't drag courses back to the course bin.  However, dragging things BACK is an uncommon occurrence anyway. issue 117

--- a/public/stylesheets/long.css
+++ b/public/stylesheets/long.css
@@ -51,13 +51,13 @@ body
 {
     white-space: nowrap;
     overflow: hidden;
-    background-color: #eee;
+    background-color: #fff;
     padding: .1em;
 }
 
 #course_bin .course .course_code
 {
-    background-color: #eee;
+    background-color: #fff;
     font-size: .75em;
     font-weight: bold;
     text-align: left;
@@ -79,7 +79,7 @@ body
 .course_container
 {
     height: 100%;
-    background-color:white;
+    background-color:#ececec;
     width: 164px;
     min-width: 164px !important;
     display: table-cell;
@@ -146,3 +146,44 @@ body
     width: 500px;
     height: 500px;
 }
+
+.auto_complete
+{
+    z-index: 2000;
+    width: auto !important;
+    background-color: white;
+}
+
+.auto_complete ul 
+{
+    margin:0px;
+    padding:0px;
+    font-size: .75em;
+    list-style-type: none;
+    text-align: left;
+}
+
+.auto_complete ul li 
+{
+    list-style-type: none;
+    margin: 0;
+    padding:2px;
+    white-space: nowrap;
+    font-weight: bold;
+    border-top: 1px dashed #000;
+	background-image: none;
+}
+
+.auto_complete ul li:first-child
+{
+    border-top: none;
+}
+
+.auto_complete ul li em
+{
+    font-weight: normal;
+    color: #999;
+    font-size: .9em;
+}
+
+
